// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation should hide the items if isOpen is false 1`] = `
<headerStyles__ListContainer>
  <Logo
    iconType="Logo"
    isFixed={false}
    viewBox="0 0 194.69 53.44"
  />
  <headerStyles__MenuItem
    isFixed={false}
    key="/"
    pose="closed"
  >
    <NavLink
      activeClassName="active"
      exact={true}
      onClick={[Function]}
      to="/"
    >
      Home
    </NavLink>
  </headerStyles__MenuItem>
  <headerStyles__MenuItem
    isFixed={false}
    key="/about"
    pose="closed"
  >
    <NavLink
      activeClassName="active"
      onClick={[Function]}
      to="/about"
    >
      About
    </NavLink>
  </headerStyles__MenuItem>
  <headerStyles__MenuItem
    isFixed={false}
    key="/contact"
    pose="closed"
  >
    <NavLink
      activeClassName="active"
      onClick={[Function]}
      to="/contact"
    >
      Contact
    </NavLink>
  </headerStyles__MenuItem>
  <headerStyles__MenuItem
    isFixed={false}
    key="/gallery"
    pose="closed"
  >
    <NavLink
      activeClassName="active"
      onClick={[Function]}
      to="/gallery"
    >
      Gallery
    </NavLink>
  </headerStyles__MenuItem>
</headerStyles__ListContainer>
`;

exports[`Navigation should show the items if isOpen is true 1`] = `
<headerStyles__ListContainer>
  <Logo
    iconType="Logo"
    isFixed={false}
    viewBox="0 0 194.69 53.44"
  />
  <headerStyles__MenuItem
    isFixed={false}
    key="/"
    pose="open"
  >
    <NavLink
      activeClassName="active"
      exact={true}
      onClick={[Function]}
      to="/"
    >
      Home
    </NavLink>
  </headerStyles__MenuItem>
  <headerStyles__MenuItem
    isFixed={false}
    key="/about"
    pose="open"
  >
    <NavLink
      activeClassName="active"
      onClick={[Function]}
      to="/about"
    >
      About
    </NavLink>
  </headerStyles__MenuItem>
  <headerStyles__MenuItem
    isFixed={false}
    key="/contact"
    pose="open"
  >
    <NavLink
      activeClassName="active"
      onClick={[Function]}
      to="/contact"
    >
      Contact
    </NavLink>
  </headerStyles__MenuItem>
  <headerStyles__MenuItem
    isFixed={false}
    key="/gallery"
    pose="open"
  >
    <NavLink
      activeClassName="active"
      onClick={[Function]}
      to="/gallery"
    >
      Gallery
    </NavLink>
  </headerStyles__MenuItem>
</headerStyles__ListContainer>
`;
